tests/match_failure/match_failure.exp
Error ------------------------------------------------------------------------------------------- disjoint_union.js:8:22

Cannot compare string [1] with property `type` of `Shape` [2] because: [incompatible-type]
 - Either string [1] is incompatible with string literal `rectangle` [3].
 - Or string [1] is incompatible with string literal `circle` [4].

   disjoint_union.js:8:22
   8|   if (shape.type === 'square') { // error
                           ^^^^^^^^ [1]

References:
   disjoint_union.js:7:22
   7| function area(shape: Shape): number {
                           ^^^^^ [2]
   disjoint_union.js:4:10
   4|   {type: 'rectangle', width: number, height: number} |
               ^^^^^^^^^^^ [3]
   disjoint_union.js:5:10
   5|   {type: 'circle', radius: number};
               ^^^^^^^^ [4]


Error ------------------------------------------------------------------------------------------ disjoint_union.js:21:22

Cannot compare string [1] with property `type` of `ExactShape` [2] because: [incompatible-type]
 - Either string [1] is incompatible with string literal `rectangle` [3].
 - Or string [1] is incompatible with string literal `circle` [4].

   disjoint_union.js:21:22
   21|   if (shape.type === 'square') { // error
                            ^^^^^^^^ [1]

References:
   disjoint_union.js:20:23
   20| function area2(shape: ExactShape): number {
                             ^^^^^^^^^^ [2]
   disjoint_union.js:17:11
   17|   {|type: 'rectangle', width: number, height: number|} |
                 ^^^^^^^^^^^ [3]
   disjoint_union.js:18:11
   18|   {|type: 'circle', radius: number|};
                 ^^^^^^^^ [4]


Error ------------------------------------------------------------------------------------------ disjoint_union.js:34:22

Cannot compare string [1] with property `type` of `ReadOnlyShape` [2] because: [incompatible-type]
 - Either string [1] is incompatible with string literal `rectangle` [3].
 - Or string [1] is incompatible with string literal `circle` [4].

   disjoint_union.js:34:22
   34|   if (shape.type === 'square') { // error
                            ^^^^^^^^ [1]

References:
   disjoint_union.js:33:23
   33| function area3(shape: ReadOnlyShape): number {
                             ^^^^^^^^^^^^^ [2]
   disjoint_union.js:30:11
   30|   {+type: 'rectangle', width: number, height: number} |
                 ^^^^^^^^^^^ [3]
   disjoint_union.js:31:11
   31|   {+type: 'circle', radius: number};
                 ^^^^^^^^ [4]


Error ----------------------------------------------------------------------------------------------------- enum.js:8:25

number literal `2` [1] is incompatible with literal union [2]. [incompatible-type]

   enum.js:8:25
   8|   } else if (binary === 2) { // oops
                              ^ [1]

References:
   enum.js:5:34
   5| function stringifyBinary(binary: Binary): string {
                                       ^^^^^^ [2]



Found 4 errors
